Family of 6 found below 100